--- a/cmd.info.binary.Capteur-Fuite-Eau.html
+++ b/cmd.info.binary.Capteur-Fuite-Eau.html
@@ -16,14 +16,14 @@
 			// Options de personnalisation avec valeur par defaut 
                // Paramètrage du logo
                   // Valeur pour ON ou 1
-                      	var srcImglogoON		= ('#logoON#'!='#'+'logoON#') ? "#logoON#" : "alarm-Eau-Fibaro-RAS";
+                      	var srcImglogoON	= ('#logoON#'!='#'+'logoON#') ? "#logoON#" : "alarm-Eau-Fibaro-RAS";
 					  	var srcImglogoON_T 	= ('#logoON_type#'!='#'+'logoON_type#') ? "#logoON_type#" : "png";
                   // Valeur pour OFF ou 0
                       	var srcImglogoOFF	= ('#logoOFF#'!='#'+'logoOFF#') ? "#logoOFF#" : "alarm-Eau-Fibaro-Alert";
-					  	var srcImglogoOFF_T 	= ('#logoOFF_type#'!='#'+'logoOFF_type#') ? "#logoOFF_type#" : "png";
+					  	var srcImglogoOFF_T = ('#logoOFF_type#'!='#'+'logoOFF_type#') ? "#logoOFF_type#" : "png";
               // Paramètre "sizehw" : à déclarer en pixels - 80 maxi
-                     		var srcImgHeight 	= (is_numeric('#sizehw#')) ? parseFloat('#sizehw#') : 32;
-                      	var srcImgWidth		= (is_numeric('#sizehw#')) ? parseFloat('#sizehw#') : 32;
+                        var srcImgHeight 	= (is_numeric('#sizeh-M#')) ? parseFloat('#sizeh-M#') : 32;
+                      	var srcImgWidth		= (is_numeric('#sizew-M#')) ? parseFloat('#sizew-M#') : 32;
               // Paramétrage des images
                       	var srcImgURL 		= 'plugins/widget/core/template/mobile/cmd.info.binary.Capteur-Fuite-Eau/';
 					  	var srcImgOn 		= srcImgURL + srcImglogoON +'.' +srcImglogoON_T; 		// Pour Valeur = 1
