--- a/cmd.info.binary.Capteur-Fuite-Eau.html
+++ b/cmd.info.binary.Capteur-Fuite-Eau.html
@@ -15,7 +15,7 @@
                         var srcImglogoON_M      = ('#logoON-M#'!='#'+'logoON-M#') ? "#logoON-M#" : "alarm-Eau-Fibaro-RAS";
                         var srcImglogoON_M_T    = ('#logoON_type-M#'!='#'+'logoON_type-M#') ? "#logoON_type-M#" : "png";
                 // Valeur pour OFF ou 0
-                        var srcImglogoOFF_M     = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF#" : "alarm-Eau-Fibaro-Alert";
+                        var srcImglogoOFF_M     = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF-M#" : "alarm-Eau-Fibaro-Alert";
                         var srcImglogoOFF_M_T   = ('#logoOFF_type-M#'!='#'+'logoOFF_type-M#') ? "#logoOFF_type-M#" : "png";
                 // Paramètrage du logo pour Erreur
                         var srcImglogoER_M	    = ('#logoER_M#'!='#'+'logoER_M#') ? "#logoER_M#": "oups";
