--- a/cmd.info.binary.Capteur-Fuite-Eau.html
+++ b/cmd.info.binary.Capteur-Fuite-Eau.html
@@ -1,7 +1,7 @@
 <div style="width:90px;height:100%;vertical-align: top;" class="cmd #history# tooltips cmd-widget container-fluid" data-type="info" data-subtype="binary" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#" title="#collectDate#">
   	<!-- Info Widget
         Basé sur les widget de 	: ksoul78/rosty
-        Mise à jour				: JAG 20190806 : Correction Bug duree
+        Mise à jour				: JAG 20190907 : Normalisation nom images => Merci à mich0111
     -->
     <span style="font-size:12px;#hideCmdName#">#name_display#</span>
     <div class="iconCmd#uid#"></div>
@@ -10,10 +10,10 @@
 	jeedom.cmd.update['#id#'] = function(_options){
 		// Paramètrage du logo
             // Valeur pour ON ou 1
-                var srcImglogoON_M      = ('#logoON-M#'!='#'+'logoON-M#') ? "#logoON-M#" : "alarm-Eau-Fibaro-RAS";
+                var srcImglogoON_M      = ('#logoON-M#'!='#'+'logoON-M#') ? "#logoON-M#" : "ea_typefibaro_off";
                 var srcImglogoON_M_T    = ('#logoON_type-M#'!='#'+'logoON_type-M#') ? "#logoON_type-M#" : "png";
             // Valeur pour OFF ou 0
-                var srcImglogoOFF_M	    = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF-M#" : "alarm-Eau-Fibaro-Alert";
+                var srcImglogoOFF_M	    = ('#logoOFF-M#'!='#'+'logoOFF-M#') ? "#logoOFF-M#" : "ea_typefibaro_on";
                 var srcImglogoOFF_M_T   = ('#logoOFF_type-M#'!='#'+'logoOFF_type-M#') ? "#logoOFF_type-M#" : "png";
 		// Paramètrage du logo pour Erreur
                 var srcImglogoER_M      = ('#logoER-M#'!='#'+'logoER-M#') ? "#logoER-M#": "oups";
